marked 1.1.11 2 Sept 2015
-----------------
BUG FIXES

* patched create.dm which was leaving one record when chunking through design data. This cased failure when using splines.

* beta v-c matrix not being properly stored on CJS with use.admb=TRUE

* modified cjs so it doesn't check for tplcpp before running admb. This was stopping it from using admb on Linux.

* run=FALSE was not working for non-HMM models because initial.list was not assigned.

CHANGES

* in crm.wrapper if a model with the same name is stored externally in the workspace it will load that file and use it as initial values unless the initial argument has been specified in the call.

* modified crmlist_fromfiles and model.table to prevent issues with lack of memory by removing models after loading. 

* modified reSplit so it would cope with left-hand-side of random effect being a formula with more than one term

* stop message was changed to warning when right-hand-side of random effect is not a factor variable. This was needed to do something like (1|time:post) where post is a 0/1 variable that restricts the random effect to occur where post=1.

marked 1.1.10 20 Aug 2015
-----------------
BUG FIXES

* qualified call to choose_files and removed from import so it would build on Linux

marked 1.1.9 19 Aug 2015
-----------------
BUG FIXES

* fixed bug in compute.real which would fail computing real values for Psi in some models

* made change to setup.parameters to handle include and mlogit parameter setting when model is re-run with rerun_crm.

CHANGES

* modified omega to accept a list of transition matrices

* added sealions data for example

marked 1.1.8 16 March 2015
-----------------
CHANGES

* modified crmlist_fromfiles to avoid issue on non-Windows machines which do not support choose.files



marked 1.1.7 10 March 2015
-----------------
CHANGES

* modified R_HMMlikelihood and loglikelihood to be more useful for computations like in hmmDemo and local_decode
